--- a/css/index.css
+++ b/css/index.css
@@ -83,6 +83,16 @@ select {
   color: var(--clr-neutral-900, white);
 }
 
+/* Removing the outline for styling purposes, this may be an accessibility issue on a larger site */
+
+input:focus {
+  outline: none;
+}
+
+label {
+  cursor: pointer;
+}
+
 /* Use smooth scrolling only if the user has not selected prefers reduced motion */
 
 @media only screen and (prefers-reduced-motion: no-preference) {
@@ -122,7 +132,7 @@ select {
     var(--container-width),
     calc(100% - calc(var(--container-padding) / 2))
   );
-  margin: 5rem auto;
+  margin: 10rem auto;
 
   /* declare as a flex container in order to have consistent gaps between the sections */
 
@@ -177,6 +187,7 @@ select {
   /* Add border and radius to turn it into a circle */
   border-radius: 50%;
   border: 1px solid var(--clr-border);
+  cursor: pointer;
 }
 
 /* Add custom checked state with an icon and gradient background */
@@ -209,13 +220,23 @@ select {
 }
 
 .delete-task {
+  cursor: pointer;
   margin-left: auto;
 }
 
 .task-details {
   display: flex;
+  flex-direction: column;
   align-items: center;
   padding: 1rem;
+  gap: 1rem;
+}
+
+@media only screen and (min-width: 640px) {
+  .task-details {
+    gap: 0;
+    flex-direction: row;
+  }
 }
 
 .task-counter {
@@ -235,6 +256,7 @@ select {
   color: var(--clr-neutral-600, hsl(234, 11%, 52%));
   font-size: 0.8125rem;
   font-weight: 700;
+  cursor: pointer;
 }
 
 .task-button--active {
